DemoAppNode_DevOps_API/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $(name)
  namespace: $(namespace)
  annotations:
    description: "Despliegue en build $(Build.BuildId)"
  labels:
    app: $(name)
spec:
  replicas: 2
  selector:
    matchLabels:
      app: $(name)
  template:
    metadata:
      labels:
        app: $(name)
    spec:
      containers:
        - name: $(name)
          image: $(repository):latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
