DemoAppNode_DevOps_API/k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: $(name)
  namespace: $(namespace)
spec:
  type: ClusterIP
  selector:
    app: $(name)
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
