DemoAppNode_DevOps_API/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: $(namespace)
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/subnets: subnet-0e87f58ec352463ae,subnet-0c283ff9eb3d00bcc
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:891377354634:certificate/6a914d67-fa4d-4b43-8903-5b9bb2a355a7
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: precustodios.online
      http:
        paths:
          - path: /health
            pathType: Exact
            backend:
              service:
                name: $(name)
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: $(name)
                port:
                  number: 80
